opciones cotizaciones pdf

--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -20,7 +20,7 @@
 				<tr>
 					<td style="font-weight: bold; padding-left: -30px;">
 						<p>
-							SOLICITUD DE PÓLIZA NUEVA DE AUTO 
+							SOLICITUD DE PÓLIZA NUEVA DE AUTO
 						</p>
 						<p>
 							FORMULARIO ÚNICO DATOS DEL CLIENTE
@@ -149,19 +149,19 @@
 								<tr>
 								<td style="width: 45px;">
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									Ingreso Anual: 
+									Ingreso Anual:
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
 									Menos de 10mil USD$
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									10mil y 30mil USD$ 
+									10mil y 30mil USD$
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									30mil y 50mil USD$ 
+									30mil y 50mil USD$
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									Más de 50mil USD$ 
+									Más de 50mil USD$
 								</td>
 								<td style="width: 45px;">
 								</tr>
@@ -174,19 +174,19 @@
 								<tr>
 								<td style="width: 45px;">
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									Ingreso Anual: 
+									Ingreso Anual:
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
 									Menos de 10mil USD$
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									10mil y 30mil USD$ 
+									10mil y 30mil USD$
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									30mil y 50mil USD$ 
+									30mil y 50mil USD$
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									Más de 50mil USD$ 
+									Más de 50mil USD$
 								</td>
 								<td style="width: 45px;">
 								</tr>
@@ -218,13 +218,13 @@
 									1.
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="width: 45px;">
 								</tr>
@@ -234,13 +234,13 @@
 									2.
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="width: 45px;">
 								</tr>
@@ -250,13 +250,13 @@
 									3.
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									
+
 								</td>
 								<td style="width: 45px;">
 								</tr>
@@ -351,7 +351,7 @@
 				<tr>
 					<td style="font-weight: bold; padding-left: -30px;">
 						<p>
-							SOLICITUD DE PÓLIZA NUEVA DE AUTO 
+							SOLICITUD DE PÓLIZA NUEVA DE AUTO
 						</p>
 						<p>
 							FORMULARIO ÚNICO DATOS DEL CLIENTE
@@ -491,7 +491,7 @@
 				<tr style="border: 1px solid #E76C42; text-align: left; padding-top: 5px; padding-left: -20px;">
 					<td colspan="2" style="padding-left: -15px;">
 						<p>
-							<table> 
+							<table>
 								<tr style="padding-bottom: -6px;">
 									<td style="text-decoration: underline; font-weight: bold; padding-right: -40px;">Datos del corredor: </td>
 									<td colspan="2">Nombre o Razón Social: </td>
@@ -515,7 +515,7 @@
 				<tr style="border: 1px solid #E76C42; text-align: left; padding-top: 5px;">
 					<td colspan="2" style="padding-left: 15px; padding-right: 10px; padding-bottom: 10px;">
 						<p>
-							<table> 
+							<table>
 								<tr style="border: 2px solid #999;">
 									<td colspan="7" style="padding-right: -40px; padding-left: -25px;">
 										<p style="padding-bottom: -6px;">
@@ -661,7 +661,7 @@
 									<td></td>
 								</tr>
 								<tr style="border: 2px solid #999; padding-bottom: -1px;">
-									<td colspan="6" style="padding-right: -40px; padding-left: -25px; width: 100px; padding-bottom: -1px;>
+									<td colspan="6" style="padding-right: -40px; padding-left: -25px; width: 100px; padding-bottom: -1px;">
 										<span style="font-weight: bold;">Nombre y apellido del funcionario que revisa: </span><span></span>
 									</td>
 									<td colspan="6" style="padding-right: -40px; padding-left: -25px; width: 100px;">
