--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -322,15 +322,15 @@
     });
 
     $('#id_tipo_id_0').on('ifChecked', function(event){
-      $(".ced").removeClass("hidden"); 
-      $(".passp").addClass("hidden"); 
+      $(".ced").removeClass("hidden");
+      $(".passp").addClass("hidden");
     });
 
     $('#id_tipo_id_1').on('ifChecked', function(event){
-      $(".ced").addClass("hidden"); 
+      $(".ced").addClass("hidden");
       $(".passp").removeClass("hidden");
     });
-  
+
 
     $(document).ready(function(){
 
@@ -401,7 +401,7 @@
         {% endif %}
     });
 
-    $(document).on("onclick", "#id_tipo_id", function(e){
+    /*$(document).on("onclick", "#id_tipo_id", function(e){
         console.log('hola');
        if( $("#id_tipo_id_0").is(':checked') ){
             var cedula = new RegExp('^([0-9]{1,2}\-?[0-9]{2,4}\-?[0-9]{3,4})$');
@@ -417,9 +417,9 @@
             $(".cedula-validacion").remove();
             $('#id_submit').prop('disabled', false);
        }
-    });
+    });*/
 
-    $("#id_identificacion").focus(function(e){
+    /*$("#id_identificacion").focus(function(e){
         e.preventDefault();
        if( $("#id_tipo_id_0").is(':checked') ){
             $(".cedula-help").remove();
@@ -427,12 +427,12 @@
        } else {
             $(".cedula-help").remove();
        }
-    });
+    });*/
 
-    $("#id_identificacion").focusout(function(e){
+    /*$("#id_identificacion").focusout(function(e){
         e.preventDefault();
         $(".cedula-help").remove();
-    });
+    });*/
 
     $(document).on("change", "#id_valor_text", function(e){
         e.preventDefault();
