--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -31,7 +31,7 @@
 					</td>
 					<td style="border: 1px solid #E76C42; text-align: left; padding-top: 5px; padding-left: -20px;">
 						<p style="text-decoration: underline; font-weight: bold; padding-bottom: -10px;">Para uso de la compañía:</p>
-						<p style="padding-bottom: -10px;"><span>No. póliza: </span><span></span><span>Riesgo: </span><span></span></p>
+						<p style="padding-bottom: -10px;"><span>No. póliza: </span><span></span>{{solicitud.pk}}<span>Riesgo: </span><span></span></p>
 						<p>Código del cliente: </p>
 					</td>
 				</tr>
@@ -44,24 +44,24 @@
 							Datos generales del cliente contratante de la póliza:
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Primer Nombre: </span><span></span>
-							<span>Segundo Nombre: </span><span></span>
-							<span>Apellido Paterno: </span><span></span>
+							<span>Primer Nombre: </span><span>{{conductor1.nombre}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Segundo Nombre: </span><span>{{conductor2.nombre2}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apellido Paterno: </span>{{conductor1.apellido}}<span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Apellido Materno: </span><span></span>
-							<span>Apellido de Casada: </span><span></span>
-							<span>Cédula/Pasaporte: </span><span></span>
-							<span>D.V. </span><span></span>
+							<span>Apellido Materno: </span><span>{{conductor2.apellido_mat}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apellido de Casada: </span>{{conductor2.apellido_cas}}<span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cédula/Pasaporte: </span>{{conductor1.identificacion}}<span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;D.V. </span><span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Fecha de nacimiento: </span><span></span><span>(dd/mm/aaaa)</span>
-							<span>País de Nacimiento: </span><span></span>
-							<span>Género: </span><span></span>
+							<span>Fecha de nacimiento: </span>{{conductor1.fecha_nacimiento}}<span></span><span>(dd/mm/aaaa)</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;País de Nacimiento: </span><span>{{conductor2.pais_nacimiento}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Género: </span><span>{{conductor1.sexo}}</span>
 						</p>
 						<p>
-							<span>Estado civil: </span><span></span>
-							<span>Nacionalidad(es)</span><span></span>
+							<span>Estado civil: </span><span>{{conductor1.estado_civil}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nacionalidad(es)</span><span>{{conductor2.nacionalidad}}</span>
 						</p>
 					</td>
 				</tr>
@@ -74,46 +74,46 @@
 							Dirección residencial:
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>País de residencia: </span><span></span>
-							<span>provincia: </span><span></span>
-							<span>Distrito: </span><span></span>
+							<span>País de residencia: </span><span>{{conductor2.pais_residencia}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Provincia: </span><span>{{conductor2.provincia}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Distrito: </span><span>{{conductor2.distrito}}</span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Corregimiento: </span><span></span>
-							<span>Urbanización: </span><span></span>
-							<span>Calle o Ave: </span><span></span>
+							<span>Corregimiento: </span><span>{{conductor2.corregimiento}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Urbanización: </span><span>{{conductor2.urbanizacion}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Calle o Ave: </span><span>{{conductor2.calle_ave}}</span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Edificio: </span><span></span>
-							<span>Piso: </span><span></span>
-							<span>Apto: </span><span></span>
-							<span>No. Casa: </span><span></span>
-							<span>Apartado postal : </span><span></span>
-							<span>Estafeta : </span><span></span>
+							<span>Edificio: </span><span>{{conductor2.edificio}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Piso: </span><span>{{conductor2.piso}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apto: </span><span>{{conductor2.apto}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;No. Casa: </span><span>{{conductor2.no_casa}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Apartado postal : </span><span>{{conductor2.apartado_postal}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Estafeta : </span><span>{{conductor2.estafeta}}</span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Teléfono residencial: </span><span></span>
-							<span>Teléfono celular: </span><span></span>
-							<span>Correo electrónico personal: </span><span></span>
+							<span>Teléfono residencial: </span>{{conductor2.telefono_res}}<span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Teléfono celular: </span><span>{{conductor1.telefono1}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Correo electrónico personal: </span><span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
 						<span style="text-decoration: underline; font-weight: bold;">
 							Datos Ocupacionales:
 						</span>
-						<span>Profesión: </span><span></span>
-						<span>Ocupación actual: </span><span></span>
+						<span>Profesión: </span><span>{{conductor2.profesion}}</span>
+						<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ocupación actual: </span><span>{{conductor2.ocupacion}}</span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Lugar de trabajo: </span><span></span>
-							<span>Actividad de la empresa: </span><span></span>
+							<span>Lugar de trabajo: </span><span>{{conductor2.empresa}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Actividad de la empresa: </span>{{conductor2.actividad_empresa}}<span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
-							<span>Dirección de la empresa: </span><span></span>
+							<span>Dirección de la empresa: </span>{{conductor2.direccion_empresa}}<span></span>
 						</p>
 						<p>
-							<span>Teléfono Oficina: </span><span></span>
-							<span>Fax: </span><span></span>
-							<span>Correo electrónico de la oficina: </span><span></span>
+							<span>Teléfono Oficina: </span><span>{{conductor2.telefono_empresa}}</span>
+							<span>&nbsp;&nbsp;&nbsp;Fax: </span><span>{{conductor2.fax_empresa}}</span>
+							<span>&nbsp;&nbsp;&nbsp;Correo electrónico de la oficina: </span><span>{{conductor2.correo_trabajo}}</span>
 						</p>
 					</td>
 				</tr>
@@ -122,17 +122,32 @@
 				</tr>
 				<tr style="border: 2px solid #999; text-align: left; padding-top: 5px; padding-left: -20px; padding-right: -30px;">
 					<td colspan="2">
-						<p style="padding-bottom: -6px;"><span>Indique si es o ha sido objeto de investigación, indagación o condena por actividades ilícitas, o delitos de lavado o blanqueo de dinero o financiamiento de terrorismo</span><span></span><span>&nbsp;No</span><span></span><span>&nbsp;Sí</span></p>
+						<p style="padding-bottom: -6px;"><span>Indique si es o ha sido objeto de investigación, indagación o condena por actividades ilícitas, o delitos de lavado o blanqueo de dinero o financiamiento de terrorismo</span>
+						{% if conductor2.ilicito == False %}
+						<span style="text-decoration: underline; font-size: 12px;">&nbsp;_X_</span><span>&nbsp;No</span>
+						<span>&nbsp;___</span><span>&nbsp;Sí</span></p>
+						{% else %}
+						<span>&nbsp;___</span><span>&nbsp;No</span>
+						<span style="text-decoration: underline; font-size: 12px;">&nbsp;_X_</span><span>&nbsp;Sí</span></p>
+						{% endif %}
 
-						<p style="padding-bottom: -6px;"><span>Es o ha sido una persona (1) Persona Políticamente Expuesta, (2) familiar cercano, o (3) estrecho colaborador de esta? </span><span></span><span>No</span><span></span><span>Sí</span><span style="font-size: 9px;">(Definiciones en la parte inferior)</span></p>
+						<p style="padding-bottom: -6px;"><span>Es o ha sido una persona (1) Persona Políticamente Expuesta, (2) familiar cercano, o (3) estrecho colaborador de esta? </span>
+						{% if conductor2.ilicito == False %}
+						<span style="text-decoration: underline; font-size: 12px;">_X_</span>&nbsp;<span>&nbsp;No</span>
+						<span>&nbsp;___</span><span>&nbsp;Sí</span>
+						{% else %}
+						<span>&nbsp;___</span><span>&nbsp;No</span>
+						<span style="text-decoration: underline; font-size: 12px;">&nbsp;_X_</span><span>&nbsp;Sí</span>
+						{% endif %}
+						<span style="font-size: 9px;">(Definiciones en la parte inferior)</span></p>
 
 						<p style="padding-bottom: -6px;">
-							<span>Cargo actual o anterior: </span><span></span>
-							<span>Período: </span><span></span>
+							<span>Cargo actual o anterior: </span><span>{{conductor2.cargo_politico}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Período: </span><span>{{conductor.periodo_politico}}</span>
 						</p>
 						<p>
-							<span>Caso 2 y 3: Nombre: </span><span></span>
-							<span>Relación: </span><span></span>
+							<span>Caso 2 y 3: Nombre: </span><span>{{conductor.nombre_politico}}</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Relación: </span><span>{{conductor.relacion_politico}}</span>
 						</p>
 					</td>
 				</tr>
@@ -143,7 +158,7 @@
 					<td colspan="2">
 						<p><span>Si su respuesta anterior fue Si y/o la prima sel segura es igual, anual o mayor a B/. 10,000.00 complete la siguiente información, en caso que no diríjase a la seccion de Datos Generales: </span><span style="font-size: 9px;"> Acerta Seguros, con base en la Matriz de riesgo, podrá solicitar en algunos otros casos que esta sección sea completada (Ley 23 del 27/04/2015).</span></p>
 
-						<p><span>Actividad fuente principal de sus ingresos (Especifique): </span><span></span></p>
+						<p><span>Actividad fuente principal de sus ingresos (Especifique): </span><span>{{conductor.actividad_principal}}</span></p>
 						<p>
 							<table>
 								<tr>
@@ -151,8 +166,9 @@
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
 									Ingreso Anual:
 								</td>
+								{% if conductor2.ingreso_principal == '<10,000.00' %}
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									Menos de 10mil USD$
+									<span style="text-decoration: underline; font-size: 12px;">_X_</span>Menos de 10mil USD$
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
 									10mil y 30mil USD$
@@ -164,11 +180,54 @@
 									Más de 50mil USD$
 								</td>
 								<td style="width: 45px;">
+								{% elif conductor2.ingreso_principal == '10,000.00-30,000' %}
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									Menos de 10mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									<span style="text-decoration: underline; font-size: 12px;">_X_</span>10mil y 30mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									30mil y 50mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									Más de 50mil USD$
+								</td>
+								<td style="width: 45px;">
+								{% elif conductor2.ingreso_principal == '30,000.00-50,000' %}
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									Menos de 10mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									10mil y 30mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									<span style="text-decoration: underline; font-size: 12px;">_X_</span>30mil y 50mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									Más de 50mil USD$
+								</td>
+								<td style="width: 45px;">
+								{% elif conductor2.ingreso_principal == '>50,000' %}
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									Menos de 10mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									10mil y 30mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									30mil y 50mil USD$
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									<span style="text-decoration: underline; font-size: 12px;">_X_</span>Más de 50mil USD$
+								</td>
+								<td style="width: 45px;">
+								{% endif %}
 								</tr>
 							</table>
 						</p>
 
-						<p><span>Actividad de otras fuentes de ingreso: </span><span></span></p>
+						<p><span>Actividad de otras fuentes de ingreso: </span><span>{{conductor2.otra_actividad}}</span></p>
 						<p>
 							<table>
 								<tr>
@@ -215,48 +274,48 @@
 								<tr>
 								<td style="width: 45px;">
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									1.
+									1. {{conductor2.ref_personal.nombre}}
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
+								{{conductor2.ref_personal.actividad}}
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
+								{{conductor2.ref_personal.relacion}}
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
-								</td>
-								<td style="width: 45px;">
-								</tr>
-								<tr>
-								<td style="width: 45px;">
-								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									2.
-								</td>
-								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
-								</td>
-								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
-								</td>
-								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
+									{{conductor2.ref_personal.telefono}}
 								</td>
 								<td style="width: 45px;">
 								</tr>
 								<tr>
 								<td style="width: 45px;">
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-									3.
+									2. {{conductor2.ref_bancaria.nombre}}
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
+								{{conductor2.ref_bancaria.actividad}}
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
+								{{conductor2.ref_bancaria.relacion}}
 								</td>
 								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
-
+								{{conductor2.ref_bancaria.telefono}}
+								</td>
+								<td style="width: 45px;">
+								</tr>
+								<tr>
+								<td style="width: 45px;">
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+									3. {{conductor2.ref_comercial.nombre}}
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+								{{conductor2.ref_comercial.actividad}}
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+								{{conductor2.ref_comercial.relacion}}
+								</td>
+								<td style="border: 2px solid #999; width: 170px; padding-right: -60px; padding-left: -25px;">
+								{{conductor2.ref_comercial.telefono}}
 								</td>
 								<td style="width: 45px;">
 								</tr>
@@ -297,13 +356,13 @@
 						<p style="padding-bottom: -6px;">
 							<span style="font-weight: bold; text-decoration: underline">Asegurado:</span>
 							<span></span>
-							<span>Cédula/Pasaporte/RUC:</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cédula/Pasaporte/RUC:</span>
 							<span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
 							<span style="font-weight: bold; text-decoration: underline">Conductor Adicional:</span>
 							<span></span>
-							<span>Cédula/Pasaporte:</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cédula/Pasaporte:</span>
 							<span></span>
 						</p>
 						<p style="font-size: 9px;">
@@ -321,27 +380,27 @@
 						</p>
 						<p style="padding-bottom: -6px;">
 							<span>Vigencia: </span>
-							<span>Desde: </span><span>(dd/mm/aaa)</span><span></span>
-							<span>Hasta: </span><span>(dd/mm/aaa)</span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Desde: </span><span>(dd/mm/aaa)</span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hasta: </span><span>(dd/mm/aaa)</span><span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
 							<span>Acreedor Hipotecario: </span><span></span>
-							<span>o Leasing: </span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;o Leasing: </span><span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
 							<span>Valor actual de la unidad: </span><span></span>
-							<span>Placa No.: </span><span></span><span style="font-size:7px;">(Obligatorio en auto usado)</span>
-							<span>Año: </span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Placa No.: </span><span></span><span style="font-size:7px;">(Obligatorio en auto usado)</span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Año: </span><span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
 							<span>Marca: </span><span></span>
-							<span>Modelo: </span><span></span>
-							<span>Uso: </span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Modelo: </span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Uso: </span><span></span>
 						</p>
 						<p>
 							<span>Motor: </span><span></span>
-							<span>Chasis: </span><span></span>
-							<span>Tipo: </span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chasis: </span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tipo: </span><span></span>
 						</p>
 					</td>
 				</tr>
@@ -370,7 +429,7 @@
 					<td colspan="2">
 						<p style="padding-bottom: -6px;">
 							<span>Prima anual: </span><span></span>
-							<span>Plan: </span><span></span>
+							<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Plan: </span><span></span>
 						</p>
 						<p style="padding-bottom: -6px;">
 							<span style="text-decoration: underline; font-weight: bold; font-size: 11px;">Observaciones: </span>
