last details of polizas, first view

--- a/cotizador_acerta/templates/administrador/base_admin.html
+++ b/cotizador_acerta/templates/administrador/base_admin.html
@@ -386,6 +386,15 @@
               </ul> -->
             </li>
             <li class="treeview">
+              <a href="{% url 'polizas_list' %}">
+                <i class="fa fa-calculator"></i> <span>Mis Polizas</span>
+              </a>
+              <!-- <ul class="treeview-menu">
+                <li><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                <li class="active"><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+              </ul> -->
+            </li>
+            <li class="treeview">
               <a href="{% url 'report_error' %}">
                 <i class="fa fa-ban"></i> <span>Reportar Error</span>
               </a>
