--- a/cotizador_acerta/templates/polizas/solicitud.html
+++ b/cotizador_acerta/templates/polizas/solicitud.html
@@ -1430,6 +1430,11 @@
         $("#id_id_responsable").prop("disabled", false);
     }
 
+    // var element = document.querySelector("#id_submit");
+    // element.onclick = function() {
+    //     window.open("{% url 'generacion-pdf-polizas' new_pk %}",'mywindow','width=1200,height=800,left=0,top=100,screenX=0,screenY=100');
+    // }
+
 </script>
 
 {% endblock custom_script %}
