--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -804,7 +804,7 @@
 											<p style="padding-bottom: -6px;">
 												<span>Sí</span><span>_X_</span>
 												<span>No</span><span>__</span>
-												<span>Definir</span><span>N/A</span>
+												<span>Definir: </span><span>N/A</span>
 											</p>
 										{% else %}
 											<p style="padding-bottom: -6px;">
