HTML de PDF de opciones (imagenes incluídas).

--- a/cotizador_acerta/templates/polizas/generacion_PDF.html
+++ b/cotizador_acerta/templates/polizas/generacion_PDF.html
@@ -1,1 +1,3 @@
+{% load staticfiles %}
+<img src="{% static "img/AcertaSeguros.png" %}"/>
 <li><a href="{% url 'generacion' %}">Probar generación de PDF</a></li>
