Algunos arreglos pequeños.

--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
@@ -72,7 +72,7 @@
     <div class="col-md-3 col-xs-8" style="margin-left: 1cm;">
         <div class="panel panel-default border: 1px solid #E76C42;">
             {% if elegida == 1 %}
-            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4 style="margin-left: 1cm;"><strong>OPCIÓN 1 - ELEGIDA</strong></h4></div>
+            <div id='heading1' class='panel-heading text-center' style='background: #ffffff; color: #E76C42; border: 1px solid #E76C42; margin-left: 1cm;'><h4><strong>OPCIÓN 1 - ELEGIDA</strong></h4></div>
             <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
                 <table style='width:100%; background: #E76C42 margin-left: 1cm;'>
             {% else %}
@@ -150,7 +150,7 @@
             <div id="panel-body" class='panel-body' style="margin-left: 1cm;">
                 <table style='width:100%; background: #E76C42 margin-left: 1cm;'>
             {% else %}
-            <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px; margin-left: 1cm;'><h4><strong>OPCIÓN 2</strong></h4></div>
+            <div id='heading1' class='panel-heading text-center' style='background: #E76C42; color: #ffffff; border-radius: 1px;'><h4><strong>OPCIÓN 2</strong></h4></div>
             <div id="panel-body" class='panel-body'>
                 <table style='width:100%; margin-left: 1cm;'>
             {% endif %}
