add optional fields

--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -1273,7 +1273,7 @@
         var year11 = today.getFullYear() -1;
         var year12 = today.getFullYear();
         var year13 = today.getFullYear() +1;
-        if (anio_ret == year12 || anio_ret == year11 || anior_ret == year13) {
+        if (anio_ret == year12 || anio_ret == year11 || anio_ret == year13) {
             $(".km-field").css('display','block');
         }
         $('#id_valor_text').maskMoney();
