Detalles en PDF de pólizas.

--- a/cotizador_acerta/templates/polizas/prueba_pdf.html
+++ b/cotizador_acerta/templates/polizas/prueba_pdf.html
@@ -5,7 +5,15 @@
   <style>
     table {
         font-family: arial, sans-serif;
+        
+        border: none;
+        width: 100%;
+        height: 100%;
+    }
+    table1 {
+        font-family: arial, sans-serif;
         border-collapse: collapse;
+        border: none;
         width: 100%;
         height: 100%;
     }
@@ -47,50 +55,63 @@
 </head>
 <body>
   
-    <div align="center" style="font-size: 6; line-height: 1%;"><b>CONDICIONES PARTICULARES</b> <br>
-    <p align="center" style="font-size: 5;"><b>COBERTURA COMPLETA PARTICULAR</b></p></div>
-  </h1>
+  <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;" cellspacing="0" cellpadding="0">
+    <tr>
+    <td colspan="5" align="center" style="border: none; margin-left: 120px;">
+      <h1><b>AUTOMOVIL</b><br>
+      <b>CONDICIONES PARTICULARES</b> <br>
+      <b>COBERTURA COMPLETA PARTICULAR</b></h1>
+    </td>
+    <td style="border: none; margin-left: 10px;" align="left">
+      polifact<br>
+      Fecha de impresión<br>
+      <font size="2">dd/mm/aaaa hh:mm PM</font><br>
+      <b>EMISIÓN</b>
+    </td>
+    </tr>
+  </table>
+<br>
 <table height="100000%" style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   <tr>
-    <td>PÓLIZA:</td>
-    <td>FACTURA:</td>
-    <td>AGENCIA:</td>
-    <td colspan="3">FECHA:</td>
+    <td><b>PÓLIZA:</b></td>
+    <td><b>FACTURA:</b></td>
+    <td><b>AGENCIA:</b></td> 
+    <td colspan="3"><b>FECHA:</b></td>
   </tr>
   <tr>
-    <td colspan="3">CONTRATANTE:</td>
-    <td colspan="3">CÉDULA/RUC:</td>
+    <td colspan="3"><b>CONTRATANTE:</b></td>
+    <td colspan="3"><b>CÉDULA/RUC:</b></td>
   </tr>
   <tr>
-    <td colspan="3">ASEGURADO:</td>
-    <td colspan="3">CÉDULA/RUC:</td>
+    <td colspan="3" style="border-top: 1px white;"><b>ASEGURADO:</b></td>
+    <td colspan="3" style="border-top: 1px white;"><b>CÉDULA/RUC:</b></td>
   </tr>
   <tr>
-    <td colspan="6">ACREEDOR:</td>
+    <td colspan="6"><b>ACREEDOR:</b></td>
   </tr>
   <tr>
-    <td colspan="3">INFORMACIÓN DE CONTACTO DEL CONTRATANTE:</td>
-    <td colspan="3" rowspan="1"> VIGENCIA DESDE(*) HASTA(*)</td>
+    <td colspan="4"><b>INFORMACIÓN DE CONTACTO DEL CONTRATANTE:</b></td>
+    <td colspan="2" rowspan="1"><font size="2"><div align="right">AL MEDIODÍA HORA OFICIAL (dd/mm/aaaa)</div></font> <b>VIGENCIA DESDE(*) HASTA(*)</b></td>
+  </tr> 
+  <tr>
+    <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN DE COBRO:</b></td>
+    <td colspan="2" style="border-top: 1px white;"><b>MONEDA</b></td>
   </tr>
   <tr>
-    <td colspan="3">DIRECCIÓN DE COBRO:</td>
-    <td colspan="3"> MONEDA</td>
+    <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b></td>
+    <td colspan="2"><b>FRECUENCIA DE FACTURACIÓN</b></td>
   </tr>
   <tr>
-    <td colspan="3">DIRECCIÓN PRINCIPAL:</td>
-    <td colspan="3">FRECUENCIA DE FACTURACIÓN</td>
+    <td colspan="4" style="border-top: 1px white;"><b>EMAIL:</b></td>
+    <td colspan="2" style="border-top: 1px white;"><b>CANTIDAD DE PAGOS</b></td>
   </tr>
   <tr>
-    <td colspan="3">EMAIL:</td>
-    <td colspan="3">CANTIDAD DE PAGOS</td>
+    <td colspan="4" style="border-top: 1px white;"><b>TELÉFONO:</b></td>
+    <td colspan="2" style="border-top: 1px white;"><b>CONDUCTO DE PAGOS</b></td>
   </tr>
   <tr>
-    <td colspan="3">TELÉFONO:</td>
-    <td colspan="3">CONDUCTO DE PAGOS</td>
-  </tr>
-  <tr>
-    <td colspan="3">CORREDOR:</td>
-    <td colspan="3">LICENCIA</td>
+    <td colspan="3"><b>CORREDOR:</b></td>
+    <td colspan="3"><b>LICENCIA</b></td>
   </tr>
   <tr>
     <th colspan="6" rowspan="1">DESCRIPCIÓN DEL AUTOMÓVIL</th>
