--- a/cotizador_acerta/templates/polizas/email_solicitud.html
+++ b/cotizador_acerta/templates/polizas/email_solicitud.html
@@ -265,7 +265,7 @@
 									<table width="540" border="0" cellpadding="0" cellspacing="0" align="center" style="text-align: center; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="fullCenter2">
 										<tbody><tr>
 											<td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 23px; color: rgb(63, 67, 69); line-height: 30px; font-weight: 100;" mc:edit="40">
-												<!--[if !mso]><!--><span style="font-family: 'proxima_novathin', Helvetica; font-weight: normal;"><!--<![endif]-->Estimado(a) {{cotizacion.conductor.nombre}}, <!--[if !mso]><!--></span><!--<![endif]-->
+												<!--[if !mso]><!--><span style="font-family: 'proxima_novathin', Helvetica; font-weight: normal;"><!--<![endif]-->Estimado(a) {{solicitud.cotizacion.conductor.nombre}}, <!--[if !mso]><!--></span><!--<![endif]-->
 											</td>
 										</tr>
 									</tbody></table>
@@ -292,10 +292,31 @@
 									<table width="540" border="0" cellpadding="0" cellspacing="0" align="center" style="text-align: center; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="fullCenter2">
 										<tbody><tr>
 											<td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: rgb(63, 67, 69); line-height: 24px;" mc:edit="41">
-												<!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->Se ha realizado correctamente una solicitud de póliza por el corredor {{solicitud.cotizacion.corredor.first_name}} {{ solicitud.cotizacion.corredor.last_name }} para el vehiculo {{solicitud.cotizacion.conductor.marca.nombre}} {{solicitud.cotizacion.conductor.modelo.nombre}} {{solicitud.cotizacion.conductor.anio}}, valorado en B/. {{{{solicitud.cotizacion.conductor.valor}}. Para ver en detalle la solicitud de la póliza, vea el PDF adjunto a este correo. <!--[if !mso]><!--></span><!--<![endif]-->
+												<!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->&nbsp;Se ha realizado correctamente una solicitud de póliza por el corredor {{solicitud.cotizacion.corredor.first_name}} {{ solicitud.cotizacion.corredor.last_name }} para el vehiculo {{solicitud.cotizacion.conductor.marca.nombre}} {{solicitud.cotizacion.conductor.modelo.nombre}} {{solicitud.cotizacion.conductor.anio}}, valorado en B/. {{solicitud.cotizacion.conductor.valor}}. Para ver en detalle la solicitud de la póliza, vea el PDF adjunto a este correo. <!--[if !mso]><!-->
+												{% if not solicitud.cotizacion.conductor.datos.first.ilicito and not solicitud.cotizacion.conductor.datos.first.politico_expuesto %}
+												<br><br>
+												Saludos Cordiales,
+												<br>
+												Acerta Seguros
+												{% endif %}
+
+												</span><!--<![endif]-->
 											</td>
 										</tr>
 									</tbody></table>
+								</td>
+							</tr>
+						</tbody></table>
+						<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile2" bgcolor="#ffffff" style="border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; background-color: rgb(255, 255, 255);" object="drag-module-small">
+							<tbody><tr>
+								<td width="100%" valign="middle">
+
+									<table width="540" border="0" cellpadding="0" cellspacing="0" align="center" style="text-align: center; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="fullCenter2">
+										<tbody><tr>
+											<td width="100%" height="50"></td>
+										</tr>
+									</tbody></table>
+
 								</td>
 							</tr>
 						</tbody></table>
@@ -309,11 +330,18 @@
 												<td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: rgb(63, 67, 69); line-height: 24px;" mc:edit="41">
 													<!--[if !mso]><!--><!--<![endif]-->
 							{% if solicitud.cotizacion.conductor.datos.first.ilicito and solicitud.cotizacion.conductor.datos.first.politico_expuesto%}
-								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación y políticamente expuesta. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></span>
+								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación y políticamente expuesta. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
 							{% elif solicitud.cotizacion.conductor.datos.first.ilicito %}
-								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></span>
+								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona que ha sido objeto de investigación. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></strong></span>
 							{% elif solicitud.cotizacion.conductor.datos.first.politico_expuesto %}
-								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->Atención: La presente solicitud fue realizada por una persona políticamente expuesta. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.<!--[if !mso]><!--></span>
+								<span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]--><strong>Atención: La presente solicitud fue realizada por una persona políticamente expuesta. Por esta razón no se podrá emitir la póliza hasta haberse completado una investigación previa del caso.</strong><!--[if !mso]><!-->
+
+								<br><br>
+												Saludos Cordiales,
+												<br>
+												Acerta Seguros
+
+												</span>
 							{% endif %}
 												</td>
 											</tr>
@@ -323,29 +351,49 @@
 							</tbody></table>
 						{% endif %}
 
-						<!-- - Button Center
-						<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile2" bgcolor="#ffffff" object="drag-module-small" style="background-color: rgb(255, 255, 255);">
+						<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile2" bgcolor="#ffffff" style="border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; background-color: rgb(255, 255, 255);" object="drag-module-small">
 							<tbody><tr>
 								<td width="100%" valign="middle">
 
 									<table width="540" border="0" cellpadding="0" cellspacing="0" align="center" style="text-align: center; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="fullCenter2">
 										<tbody><tr>
-											<td>
-												<table border="0" cellpadding="0" cellspacing="0" align="left">
-													<tbody><tr>
-														<td align="center" height="45" bgcolor="#4edeb5" style="border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding-left: 30px; padding-right: 30px; font-weight: bold; font-family: Helvetica, Arial, sans-serif; color: rgb(255, 255, 255); background-color: rgb(78, 222, 181);" mc:edit="42">
-															<span style="font-family: 'proxima_nova_rgbold', Helvetica; font-weight: normal;">
-																<a href="#" style="color: rgb(255, 255, 255); font-size: 15px; text-decoration: none; line-height: 34px; width: 100%;">Reset Password</a>
-															</span>
-														</td>
-													</tr>
-												</tbody></table>
-											</td>
+											<td width="100%" height="50"></td>
 										</tr>
 									</tbody></table>
+
 								</td>
 							</tr>
-						</tbody></table><!- End Button Center -->
+						</tbody></table>
+
+						<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="full2" object="drag-module-small">
+							<tbody><tr>
+								<td width="100%" height="30"></td>
+							</tr>
+						</tbody></table>
+
+						<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile2" object="drag-module-small">
+							<tbody><tr>
+								<td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 13px; color: rgb(255, 255, 255); line-height: 24px; font-style: italic;" mc:edit="44">
+									<!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->Copyright Acerta® Seguros 2016 <!--<![endif]--></span><!--[if !mso]><!-->
+								</td>
+							</tr>
+						</tbody></table>
+
+
+						<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile2" object="drag-module-small">
+							<tbody><tr>
+								<td width="100%" height="30"></td>
+							</tr>
+						</tbody></table>
+
+						<table width="600" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile2" object="drag-module-small">
+							<tbody><tr>
+								<td width="100%" height="29"></td>
+							</tr>
+							<tr>
+								<td width="100%" height="1"></td>
+							</tr>
+						</tbody></table>
 						</div>
 
 					</td>
