No se muestran planes al admin, valor vacio

--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -185,13 +185,17 @@
                         <h3 id="subtitulo"><strong>Datos del Cliente</strong></h3>
                         <div class="col-md-6">
 
+                        {% if user.groups.all.0.name != 'super_admin' and user.groups.all.0.name != 'admin'%}
                           <h3 id="subtitulo"><strong>Planes: </strong></h3>
                            <label for="planes">Seleccione el plan que corresponda: </label>
-                           <select class="form-control" id="planes">
+                           <select name="planes" class="form-control" id="planes">
                                {% for plan in planes %}
                                <option>{{plan}}</option>
                                {% endfor %}
                            </select>
+                        {% else %}
+                            <input type="hidden" name="planes" value="">
+                        {% endif %}
 
                             <h3 id="subtitulo"><strong>Persona</strong></h3>
                             {% bootstrap_field form.nombre layout='horizontal' show_label=False field_class='form-field' %}
